# bump-version

./: action.yml  package-lock.json  package.json  test.js
.github/workflows/: bump.yml
src/: index.js  post.js  shared.js
testData/: Cargo.toml  Project.csproj.xml  meson.build  package.json  pubspec.yaml  pyproject.toml
